# ModernPrimitive

./: .gitignore  .python-version  CHANGELOG.md  README.ja.md  README.md  __init__.py  aux_func.py  aux_node.py  blender_manifest.toml  constants.py  convert.py  exception.py  modifier_select.py  operator.py  primitive.py  pyproject.toml
assets/: __common__.blend  capsule.blend  cone.blend  cube.blend  cylinder.blend  deformablecube.blend  gear.blend  grid.blend  icosphere.blend  primitive_nodes.blend  quadsphere.blend  spring.blend  torus.blend  tube.blend  uvsphere.blend
src/: apply_material.py  apply_mesh.py  apply_scale.py  aux_func.py  aux_math.py  aux_node.py  aux_other.py  check_editmesh.py  color.py  constants.py  convert.py  cube.py  draw_aux.py  equalize_dcube_size.py  exception.py  extract_primitive.py  focus_modifier.py  gizmo_info.py  hud_draw.py  keymap.py  make_primitive.py  material_prop.py  modal_edit.py  modern_primitive.py  modifier_select.py  operator.py  panel.py  preference.py  primitive.py  primitive_prop.py  reset_origin.py  restore_default.py  store_gizmoinfo.py  switch_wireframe.py  text.py  version.py  wireframe.py
src/convert/: __init__.py  common_func.py  common_type.py  convert_to_baseop.py  convert_to_capsule.py  convert_to_cone.py  convert_to_cube.py  convert_to_cylinder.py  convert_to_grid.py  convert_to_sphere.py  convert_to_torus.py  convert_to_tube.py
src/hud/: capsule.py  cone.py  cube.py  cylinder.py  dcube.py  drawer.py  gear.py  grid.py  hud_draw.py  icosphere.py  modal_edit_hud.py  quadsphere.py  spring.py  torus.py  tube.py  uvsphere.py
src/panel/: __init__.py  object_panel.py
src/util/: aux_func.py  aux_node.py  aux_other.py  keymap_helper.py  keymap_manager.py
