[project]
name = "ModernPrimitive"
version = "0.0.27"
description = "ModernPrimitive Blender-Addon"
authors = [
    { name = "Degarashi", email = "degarasu@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pynvim>=0.5.2",
    "debugpy>=1.8.9",
    "ruff>=0.8.2",
    "ruff-lsp>=0.0.59",
    "fake-bpy-module-latest>=20241208",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modern_primitive"]

[tool.ruff]
line-length = 96
target-version = "py311"
exclude = [
	".venv",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
	"A",
	"PYI",
	"RET",
	"SIM",
	"PL",
	"RUF",
	"Q",
	"E",
	"W",
	"F",
	"B",
	"C4",
	"C9",
	"UP",
]
