[project]
name = "ModernPrimitive"
version = "0.0.41"
description = "ModernPrimitive Blender-Addon"
authors = [
    { name = "Degarashi", email = "degarasu@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modern_primitive"]

[tool.ruff]
line-length = 96
target-version = "py311"
exclude = [
	".venv",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
	"A",
	"PYI",
	"RET",
	"SIM",
	"PL",
	"RUF",
	"Q",
	"E",
	"W",
	"F",
	"B",
	"C4",
	"C9",
	"UP",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "fake-bpy-module-latest>=20250927",
    "pynvim>=0.6.0",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
    "ruff-lsp>=0.0.62",
]
